# zkevm-circuits

./: Makefile
.github/workflows/: ci.yml
bus-mapping/src/circuit_input_builder/: execution.rs
bus-mapping/src/evm/: opcodes.rs
bus-mapping/src/evm/opcodes/: calldatacopy.rs  codecopy.rs
circuit-benchmarks/: Cargo.toml
circuit-benchmarks/src/: halo2ecc_benchmark.rs  lib.rs
eth-types/: Cargo.toml
gadgets/: Cargo.toml
integration-tests/: Cargo.toml
keccak256/: Cargo.toml
prover/: Cargo.toml
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/evm_circuit/: execution.rs  step.rs  witness.rs
zkevm-circuits/src/evm_circuit/execution/: codecopy.rs  logs.rs  selfbalance.rs
