[package]
name = "eth-types"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]

[dependencies]
ethers-core = "0.6"
ethers-providers = "0.6"
hex = "0.4"
lazy_static = "1.4"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "35fae8cfb75052516aeaceddbd16e3f1c54edad2", default-features = true }
regex = "1.5.4"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
uint = "0.9.1"
itertools = "0.10"
