[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]

[dependencies]
halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "4112958c7fa980b331897fd030a329095f418ff9", default-features = true }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
