[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]

[dependencies]
halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "03677477e453a0672986c904f7bf276aa314995c", default-features = true }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
